добавлено чтение измерений перерасчетов (#630)
* добавлено чтение измерений перерасчетов

* фиксы